# sonic-pipewire

./: .gitignore  .kde-ci.yml  CMakeLists.txt  README.md
autotests/: CMakeLists.txt  TestDmaBufEglSetup.cpp  TestPipeWireFrameData.cpp
src/: CMakeLists.txt  dmabufeglsetup.cpp  dmabufeglsetup_p.h  dmabufhandler.cpp  pipewireframeutils_p.cpp  pipewireframeutils_p.h  pipewiresourcestream.cpp  pwhelpers.cpp
tests/: CMakeLists.txt  HeadlessPortalTest.cpp  HeadlessTest.cpp  RecordMe.cpp  RecordMe.h  RecordMePortalTest.cpp  headlessportalutils.cpp  headlessportalutils.h  main.qml  org.kde.kpipewireheadlesstest.desktop.cmake  portalfdutils.cpp  portalfdutils.h  xdp-main.cpp
